--- a/views/new.ejs
+++ b/views/new.ejs
@@ -1,44 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
+  </head>
+  <body>
     <h1>From here you can Add more products</h1>
-    
-    <form action="/products" method="POST">
-         
-        <div>
 
-            <label for="name"></label>
-            Name: <input type="text" id="name" name="name">
-        </div>
-         <hr>
-        <div>
+    <form action="/products"  method="POST" novalidate>
+      <div>
+        <label for="name"></label>
+        Name: <input type="text" id="name" name="name" required />
+        <div class="valid-feedback">Looks good!</div>
+        <div class="invalid-feedback">Please enter your name.</div>
+      </div>
 
-            <label for="img"></label>
-            Image: <input type="text" id="img" name="img">
-        </div>
-         
-        <hr>
-        <div>
-            
-            <label for="price"></label>
-            Price: <input type="text" id="price" name="price">
-        </div>
-        
-        <hr>
-        <div>
-            
-            <label for="desc">Description: </label>
-          <textarea name="desc" id="desc" cols="30" rows="10">Desc</textarea>
-        </div>
-         
-        <hr>
-        <button type="submit">Submit</button>
+      <hr />
+
+      <div>
+        <label for="img"></label>
+        Image: <input type="text" id="img" name="img" />
+      </div>
+
+      <hr />
+
+      <div>
+        <label for="price"></label>
+        Price: <input type="text" id="price" name="price" required />
+
+        <div class="valid-feedback">Looks good!</div>
+        <div class="invalid-feedback">Please enter Price.</div>
+      </div>
+
+      <hr />
+      
+      <div>
+        <label for="desc">Description: </label>
+        <textarea name="desc" id="desc" cols="30" rows="10">Desc</textarea>
+      </div>
+
+      <hr />
+      <button type="submit">Submit</button>
     </form>
-</body>
+    <script
+    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+    crossorigin="anonymous"
+    ></script>
+    <script>
+      // Example starter JavaScript for disabling form submissions if there are invalid fields
+      (function () {
+        "use strict";
+
+        // Fetch all the forms we want to apply custom Bootstrap validation styles to
+        var forms = document.querySelectorAll(".needs-validation");
+
+        // Loop over them and prevent submission
+        Array.prototype.slice.call(forms).forEach(function (form) {
+          form.addEventListener(
+            "submit",
+            function (event) {
+              if (!form.checkValidity()) {
+                event.preventDefault();
+                event.stopPropagation();
+              }
+
+              form.classList.add("was-validated");
+            },
+            false
+          );
+        });
+      })();
+    </script>
+   
+  </body>
 </html>
