--- a/views/show.ejs
+++ b/views/show.ejs
@@ -4,17 +4,78 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="/css/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 <body>
-     
-    <h2>Your product is <span><%= foundProduct.name%></span> </h1>
+    
+    <section class="row mx-5  my-5  ">
 
-    <img src="<%= foundProduct.img ? foundProduct.img : 'not supported' %>" width="200px" height="200px" alt="img">
-     <h4><%= foundProduct.price%></h4>
-     <h4><%= foundProduct.desc%></h4>
-     
-     <button ><a href="/products/<%=foundProduct.id%>/edit">Edit Product</a></button>
-     <button ><a href="/products">All Products</a></button>
-      
+       <div class="col-6 border py-5 px-5">
+           
+           <h2>Your product is <span><%= foundProduct.name%></span> </h1>
+            
+            <img src="<%= foundProduct.img %>" width="200px" height="200px" alt="img">
+            <h4>Price: <%= foundProduct.price%></h4>
+            <h4>Description: <%= foundProduct.desc%></h4>
+            
+            <button ><a href="/products/<%=foundProduct.id%>/edit">Edit Product</a></button>
+            <button ><a href="/products">All Products</a></button>
+
+            <div class="mx-5 my-5 border">
+                
+               <% for(let review of foundProduct.reviews){ %>
+                  <div class="border">
+                        <h3>Rating: </h3>
+                       <p class="starability-result mx-5" data-rating="<%=review.rating %>">Rated: <%=review.rating %> </p>
+                          
+                          <h5 class="mx-5">--<%=review.comment%></h5>
+                          <%if(review.createdAt){ %>
+                             <h5 class="mx-5">--<%=review.createdAt.toDateString()%></h5>
+                           <%} %>
+                          
+                    </div>
+                <% } %>
+            </div>
+            
+        </div>
+        
+        <div class="col-6 border py-5 px-5">
+            <div>
+                
+                <h4>Rating Form</h4>
+
+                <form action="/products/<%=foundProduct.id%>/review" method="POST">
+
+                    <label for="rating">Rating: </label>
+                    <!-- <input type="range" min="0" max="5" name="rating" id="rating"> -->
+                    <fieldset class="starability-basic">
+                        <legend>Rate Us:</legend>
+                        <input type="radio" id="no-rate" class="input-no-rate" name="rating" value="0" checked aria-label="No rating." />
+                        <input type="radio" id="second-rate1" name="rating" value="1" />
+                        <label for="second-rate1" title="Terrible">1 star</label>
+                        <input type="radio" id="second-rate2" name="rating" value="2" />
+                        <label for="second-rate2" title="Not good">2 stars</label>
+                        <input type="radio" id="second-rate3" name="rating" value="3" />
+                        <label for="second-rate3" title="Average">3 stars</label>
+                        <input type="radio" id="second-rate4" name="rating" value="4" />
+                        <label for="second-rate4" title="Very good">4 stars</label>
+                        <input type="radio" id="second-rate5" name="rating" value="5" />
+                        <label for="second-rate5" title="Amazing">5 stars</label>
+                      </fieldset>
+                    
+                    <br>
+                    
+                    <label for="comment">Comments: </label>
+                    <textarea name="comment" id="comment"  rows="3"></textarea>
+
+                    <br>
+                    <button type="submit">Add Review</button>
+                </form>
+            </div>
+        </div>
+            
+    </section>
+     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>   
 </body>
 </html>
