--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -1,11 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
+
+<%-include('./partials/header')%>
 
     <h1>From here you can Edit your product</h1>
     
@@ -42,5 +36,5 @@
         <button type="submit">Add Changes</button>
         <button ><a href="/products">All Products</a></button>
     </form>
-</body>
-</html>
+
+    <%-include('partials/footer')%>
