--- a/views/new.ejs
+++ b/views/new.ejs
@@ -1,54 +1,47 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
-      crossorigin="anonymous"
-    />
-  </head>
-  <body>
-    <h1>From here you can Add more products</h1>
 
-    <form action="/products"  method="POST" novalidate>
-      <div>
-        <label for="name"></label>
-        Name: <input type="text" id="name" name="name" required />
-        <div class="valid-feedback">Looks good!</div>
-        <div class="invalid-feedback">Please enter your name.</div>
-      </div>
+<div>
+<%-include('partials/header')%>
+    <h1 class="mx-5 my-5">From here you can Add more products</h1>
 
-      <hr />
+    <div class="mx-5 my-5 row">
 
-      <div>
-        <label for="img"></label>
-        Image: <input type="text" id="img" name="img" />
-      </div>
-
-      <hr />
-
-      <div>
-        <label for="price"></label>
-        Price: <input type="text" id="price" name="price" required />
-
+    <form  action="/products"  method="POST" novalidate>
+      <div class="mb-3 col-6">
+        <label for="name" class="form-label">Name:</label>
+        <input type="email" class="form-control" id="name" name="name" required aria-describedby="emailHelp">
+      
         <div class="valid-feedback">Looks good!</div>
         <div class="invalid-feedback">Please enter Price.</div>
       </div>
 
-      <hr />
-      
-      <div>
-        <label for="desc">Description: </label>
-        <textarea name="desc" id="desc" cols="30" rows="10">Desc</textarea>
+
+      <div class="mb-3 col-6">
+        <label for="img" class="form-label">Image:</label>
+        <input type="text" class="form-control" id="img" name="img"  aria-describedby="emailHelp">
       </div>
 
-      <hr />
-      <button type="submit">Submit</button>
+
+      <div class="mb-3 col-6">
+        <label for="price" class="form-label">Price:</label>
+        <input type="text" class="form-control" id="price" name="price" required aria-describedby="emailHelp">
+       
+        <div class="valid-feedback">Looks good!</div>
+        <div class="invalid-feedback">Please enter Price.</div>
+      </div>
+
+      <div class=" mb-3 col-6">
+        <label for="desc">Description:</label>
+        <textarea class="form-control" name="desc" placeholder="Do write some desc.." id="desc"></textarea>
+        
+      </div>
+      
+
+       <button type="submit" class="btn btn-primary">Submit</button>
     </form>
+
+  </div>
+ 
+  
     <script
     src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
@@ -79,6 +72,7 @@
         });
       })();
     </script>
-   
-  </body>
-</html>
+         
+    </body>
+
+    </html>
