--- a/views/show.ejs
+++ b/views/show.ejs
@@ -1,16 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="/css/style.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-</head>
-<body>
-    
-    <section class="row mx-5  my-5  ">
 
+    <%-include('partials/header')%>
+
+    <section class="row mx-5  my-5  ">
+    
+        <%-include('./partials/flash')%>
+        
+    
        <div class="col-6 border py-5 px-5">
            
            <h2>Your product is <span><%= foundProduct.name%></span> </h1>
@@ -75,7 +70,4 @@
             </div>
         </div>
             
-    </section>
-     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>   
-</body>
-</html>
+        <%-include('partials/footer')%>
