--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -1,7 +1,7 @@
 
 <%-include('./partials/header')%>
 
-    <h1>From here you can Edit your product</h1>
+    <h1 class="text-center">From here you can Edit your product</h1>
     
     <form action="/products/<%=foundProduct.id%>?_method=PATCH" method="POST">
          
