--- a/views/new.ejs
+++ b/views/new.ejs
@@ -1,7 +1,7 @@
 
 <div>
 <%-include('partials/header')%>
-    <h1 class="mx-5 my-5">From here you can Add more products</h1>
+    <h1 class="mx-5 my-5 text-center">From here you can Add more products</h1>
 
     <div class="mx-5 my-5 row">
 
@@ -36,7 +36,7 @@
       </div>
       
 
-       <button type="submit" class="btn btn-primary">Submit</button>
+       <button type="submit" >Submit</button>
     </form>
 
   </div>
