--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -1,5 +1,6 @@
 
 <%-include('./partials/header')%>
+<%-include('./partials/navbar')%>
 
     <h1 class="text-center">From here you can Edit your product</h1>
     
@@ -34,7 +35,6 @@
          
         <hr>
         <button type="submit">Add Changes</button>
-        <button ><a href="/products">All Products</a></button>
     </form>
 
     <%-include('partials/footer')%>
