--- a/views/new.ejs
+++ b/views/new.ejs
@@ -1,6 +1,7 @@
 
 <div>
 <%-include('partials/header')%>
+<%-include('./partials/navbar')%>
     <h1 class="mx-5 my-5 text-center">From here you can Add more products</h1>
 
     <div class="mx-5 my-5 row">
