--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -1,5 +1,6 @@
 
 <%-include('../partials/header')%>
+<%-include('../partials/navbar')%>
 <div>
     <h1 class="mx-5 my-5 text-center">SignUp Form</h1>
 
@@ -21,7 +22,19 @@
       <div class="mb-3 col-6">
         <label for="gender" class="form-label">Gender:</label>
         <input type="text" class="form-control" id="gender" name="gender"  aria-describedby="emailHelp">
+      </div>
 
+      <p >You want to Register as a?</p>
+      <div class="mb-3 col-6 d-flex justify-content-center ">
+        <div class="mx-5">
+          <label for="roleB" class="form-label">Buyer:</label>
+          <input type="radio" class="form-check-input" value="buyer" id="roleB" name="role"  aria-describedby="emailHelp">
+        </div>
+        
+        <div class="mx-5">
+          <label for="roleS" class="form-label">Seller:</label>
+          <input type="radio" class="form-check-input" value="seller" id="roleS" name="role"  aria-describedby="emailHelp">
+        </div>
       </div>
 
       <div class=" mb-3 col-6">
