--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -7,14 +7,23 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="">Home</a>
+            <a class="nav-link active" aria-current="page" href="/products">All Products</a>
           </li>
+          <%if(currentUser && currentUser.role === 'seller'){%>
+
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="/products/new">Add New Products</a>
+            </li>
+          <%}%>
 
 
         </ul>
         <div class="d-flex">
-         <a href="/login"><button class="mx-5 my-2  btn btn-outline-light" type="submit">Log-in</button></a>
-          <a href="/logout"><button class="mx-3 my-2 btn btn-outline-light" type="submit">Log-out</button></a>
+          <%if(!currentUser){%>
+            <a href="/login"><button class="mx-5 my-2  btn btn-outline-light" type="submit">Log-in</button></a>
+          <%}else{%>
+            <a href="/logout"><button class="mx-3 my-2 btn btn-outline-light" type="submit">Log-out</button></a>
+          <%}%>
         </div>
       </div>
     </div>
