--- a/views/show.ejs
+++ b/views/show.ejs
@@ -1,5 +1,6 @@
 
     <%-include('partials/header')%>
+    <%-include('./partials/navbar')%>
 
     <section class="row mx-5  my-5  ">
     
@@ -14,8 +15,19 @@
             <h4>Price: <%= foundProduct.price%></h4>
             <h4>Description: <%= foundProduct.desc%></h4>
             
+           <% if(currentUser && currentUser.role === 'seller'){%>
+
+            <div class="d-flex  align-items-center justify-content-center ">
+
             <button ><a href="/products/<%=foundProduct.id%>/edit">Edit Product</a></button>
-            <button ><a href="/products">All Products</a></button>
+            
+            <form class="mx-3" action="/products/<%=foundProduct.id%>?_method=Delete" method="POST">
+                   
+                <button>Delete Product</button>
+             </form>
+
+             </div>
+            <%}%> 
 
             <div class="mx-5 my-5 border">
                 
