--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -6,6 +6,11 @@
     <title>Document</title>
     <link rel="stylesheet" href="/css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <!-- axious -->
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <!-- font-Awesome -->
+    <script src="https://kit.fontawesome.com/2616bc9d69.js" crossorigin="anonymous"></script>
+ 
 </head>
 <body>
       
