--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,20 +1,12 @@
-button{
-  text-decoration: none;
-  color: inherit;
 
-  /* Style your button as needed */
-  /* background-color: #4CAF50; Green background color */
-  padding: 5px 10px; /* Padding for better appearance */
-  /* border: none; Remove border */
-  cursor: pointer; 
-}
-
-
-a{
+/* a{
   color: white;
   text-decoration: none;
   border-bottom: none;
 
+} */
+ul{
+  /* color: white; */
 }
 button a{
   text-decoration: none; /* Remove underline */
