--- a/views/show.ejs
+++ b/views/show.ejs
@@ -8,56 +8,55 @@
         
     
        <div class="col-6 border py-5 px-5">
-           
-           <h2>Your product is <span><%= foundProduct.name%></span> </h1>
-            
-            <img src="<%= foundProduct.img %>" width="200px" height="200px" alt="img">
-            <h4>Price: <%= foundProduct.price%></h4>
-            <h4>Description: <%= foundProduct.desc%></h4>
-            
-           <% if(currentUser && currentUser.role === 'seller'){%>
 
-            <div class="d-flex  align-items-center justify-content-center ">
-
-            <button ><a href="/products/<%=foundProduct.id%>/edit">Edit Product</a></button>
-            
-            <form class="mx-3" action="/products/<%=foundProduct.id%>?_method=Delete" method="POST">
-                   
-                <button>Delete Product</button>
-             </form>
-
-             </div>
-            <%}%> 
-
-            <div class="mx-5 my-5 border">
-                
-               <% for(let review of foundProduct.reviews){ %>
-                  <div class="border">
-                        <h3>Rating: </h3>
-                       <p class="starability-result mx-5" data-rating="<%=review.rating %>">Rated: <%=review.rating %> </p>
-                          
-                          <h5 class="mx-5">--<%=review.comment%></h5>
-                          <%if(review.createdAt){ %>
-                             <h5 class="mx-5">--<%=review.createdAt.toDateString()%></h5>
-                           <%} %>
-                          
-                    </div>
-                <% } %>
+        <div class="card shadow mt-3 mx-auto" style="width: 15rem">
+            <img
+              class="img"
+              src="<%=foundProduct.img%>"
+              class="card-img-top"
+              alt="..."
+            />
+            <div class="card-body">
+              <h3 class="card-title text-center"><%= foundProduct.name %></h3>
+              <h5 class="card-title">Rs: <%= foundProduct.price %></h5>
+              <p class="card-text"><%= foundProduct.desc %></p>
+              <a href="#" class="btn btn-outline-primary btn-sm">Buy</a>
+              <!-- <a href="#" class="btn btn-secondary">Add to Cart</a> -->
+              <form
+                class="d-inline-block"
+                action="/user/<%=foundProduct._id%>/add"
+                method="POST"
+              >
+                <button class="btn btn-outline-success  btn-sm"> Cart</button>
+              </form>
+              <% if(currentUser && currentUser.role === "seller"){ %>
+              <a href="/products/<%=foundProduct._id%>/edit" class="btn btn-outline-info btn-sm"
+                >Edit</a
+              >
+              <form
+                class="d-inline-block"
+                action="/products/<%=foundProduct._id%>?_method=DELETE"
+                method="POST"
+              >
+                <button class="btn btn-outline-danger btn-sm">Delete</button>
+              </form>
+              <% } %>
             </div>
-            
-        </div>
+          </div>
+         
+          </div>
         
         <div class="col-6 border py-5 px-5">
-            <div>
+            <div class="border">
                 
-                <h4>Rating Form</h4>
+                
+                <form class="d-flex flex-column align-items-center justify-content-center" action="/products/<%=foundProduct.id%>/review" method="POST">
+                    <h4 class="mb-2">Rating Form</h4>
 
-                <form action="/products/<%=foundProduct.id%>/review" method="POST">
-
-                    <label for="rating">Rating: </label>
+                    <label class="bolder mt-2" for="rating">How much Star would you give:</label>
                     <!-- <input type="range" min="0" max="5" name="rating" id="rating"> -->
                     <fieldset class="starability-basic">
-                        <legend>Rate Us:</legend>
+                        <legend > </legend>
                         <input type="radio" id="no-rate" class="input-no-rate" name="rating" value="0" checked aria-label="No rating." />
                         <input type="radio" id="second-rate1" name="rating" value="1" />
                         <label for="second-rate1" title="Terrible">1 star</label>
@@ -77,9 +76,25 @@
                     <textarea name="comment" id="comment"  rows="3"></textarea>
 
                     <br>
-                    <button type="submit">Add Review</button>
+                    <button class="btn btn-outline-warning mb-2" type="submit">Add Review</button>
                 </form>
             </div>
+
+            <div class="mx-5 my-5 border">
+                
+                <h3>Our Product Ratings: </h3>
+                <% for(let review of foundProduct.reviews){ %>
+                   <div class="d-flex flex-column align-items-center justify-content-center border">
+                        <p class="starability-result mx-5" data-rating="<%=review.rating %>">Rated: <%=review.rating %> </p>
+                           
+                           <h5 class="mx-5">--<%=review.comment%></h5>
+                           <%if(review.createdAt){ %>
+                              <h5 class="mx-5">--<%=review.createdAt.toDateString()%></h5>
+                            <%} %>
+                           
+                     </div>
+                 <% } %>
+             </div>
         </div>
             
         <%-include('partials/footer')%>
