--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -22,7 +22,7 @@
       </div>
       
 
-       <button type="submit" >Login</button>
+       <button class="btn btn-outline-dark " type="submit" >Login</button>
        <p>Don't have an account <a href="/register">SignUp here</a></p>
     </form>
 
