--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -44,7 +44,7 @@
       </div>
       
 
-       <button type="submit" >Submit</button>
+       <button class="btn btn-outline-dark " type="submit" >Submit</button>
        <p>Already have an account <a href="/login">Login here</a></p>
     </form>
 
