--- a/views/new.ejs
+++ b/views/new.ejs
@@ -4,7 +4,7 @@
 <%-include('./partials/navbar')%>
     <h1 class="mx-5 my-5 text-center">From here you can Add more products</h1>
 
-    <div class="mx-5 my-5 row">
+    <div class="mx-5 my-5 ">
 
     <form  action="/products"  method="POST" novalidate>
       <div class="mb-3 col-6">
