--- a/views/cart/cart.ejs
+++ b/views/cart/cart.ejs
@@ -1,49 +1,51 @@
 <%-include('../partials/header')%> <%-include('../partials/navbar')%>
 <%-include('../partials/flash')%>
 
-<section class="container">
-  <h1 class="display-6 mt-5">MY CART</h1>
+<section class="container row">
+  <h1 class="display-6 mt-5 ms-3">MY CART</h1>
+    <% for(let item of user.cart){ %>
+    <div class="col-6 card shadow mb-5 mt-3 mx-auto" style="width: 15rem">
+      <img
+        class="img mt-3"
+        src="<%=item.img%>"
+        class="card-img-top"
+        alt="..."
+      />
+      <div class="card-body">
+        <h3 class="card-title text-center">Name: <%=item.name%></h3>
+        
+        <p class="card-text"><%=item.desc%></p>
+       
+        <div class="d-flex justify-content-center mx-2">
+        <form
+        class="d-inline-block "
+        action="/user/<%=item.id%>/remove"
+        method="POST"
+       >
+        <button class="btn btn-outline-danger  mx-2">-</button>
+      </form>
 
-  <div class="row">
-    <div class="col-lg-8">
-      <% for(let item of user.cart){ %>
-      <div class="card mx-auto m-3 border" style="max-width: 500px">
-        <div class="row g-0">
-          <div class="col-4">
-            <img class="img-fluid rounded-start" src="<%=item.img%>" alt="" />
-          </div>
-          <div class="col-8">
-            <div class="card-body">
-              <h5 class="card-title">Name: <%=item.name%></h5>
-              <p class="card-text"><%=item.desc%></p>
-
-              <form
-                class="mx-3"
-                action="/user/<%=item.id%>/remove"
-                method="POST"
-              >
-                <button>-</button>
-              </form>
-
-              <form class="mx-3" action="/user/<%=item.id%>/add" method="POST">
-                <button>+</button>
-              </form>
-            </div>
-          </div>
-        </div>
+      <form  class="d-inline-block" action="/user/<%=item.id%>/add" method="POST">
+        <button class="btn btn-outline-primary ">+</button>
+      </form>
       </div>
-      <% } %>
+        <!-- <a href="#" class="btn btn-secondary">Add to Cart</a> -->
+
+      </div>
     </div>
-    <div class="col-lg-4">
-      <ul>
+    <% } %>
+
+    <div class="col-4  mb-5 ">
+      <h3>Amount to be payed :</h3>
+      <ul class="mx-5 my-5">
         <% for(let item of user.cart){ %>
         <li><span> <%=item.name%> --&gt; $ <%=item.price%> </span></li>
         <% } %>
         <li>Total Amount: $ <%=totalAmount%></li>
       </ul>
-      <button class="btn btn-sm btn-success">Checkout</button>
+      <button class=" mx-5 btn  btn-outline-dark">Checkout</button>
     </div>
-  </div>
+
 </section>
 
 <%-include('../partials/footer')%>
