--- a/views/partials/flash.ejs
+++ b/views/partials/flash.ejs
@@ -2,7 +2,7 @@
 <div class="d-flex flex-column align-items-center justify-content-center">
 
     <% if(success && success.length){%> 
-        <div class="alert alert-warning alert-dismissible fade show my-2 col-10" role="alert">
+        <div class="alert alert-success alert-dismissible fade show my-2 col-10" role="alert">
             <strong><%=success%>!</strong>
             <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
         </div>
