stripe payemnt gateway

--- a/views/cart/cart.ejs
+++ b/views/cart/cart.ejs
@@ -43,7 +43,7 @@
         <% } %>
         <li>Total Amount: $ <%=totalAmount%></li>
       </ul>
-      <button class=" mx-5 btn  btn-outline-dark">Checkout</button>
+      <a href="/checkout/<%=user._id%>"><button class=" mx-5 btn  btn-outline-dark">Checkout</button></a>
     </div>
 
 </section>
