--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -7,7 +7,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto d-flex align-items-center bolder  mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link text-capitalize active" aria-current="page" href="/products">All Products</a>
+            <a class="nav-link text-capitalize active" aria-current="page" href="/products"> Products</a>
           </li>
           <%if(currentUser && currentUser.role === 'seller'){%>
 
