--- a/views/cart/cart.ejs
+++ b/views/cart/cart.ejs
@@ -9,6 +9,7 @@
         class="img mt-3"
         src="<%=item.img%>"
         class="card-img-top"
+        width="100%" height="300px"
         alt="..."
       />
       <div class="card-body">
