--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,7 +13,7 @@
        <% for(let item of products){ %>
         <div class="col-lg-3  product-card">
             <div class="card text-center shadow mt-3 mx-auto" style="width: 18rem;">
-                <img class="img" src="<%=item.img%>" class="card-img-top" alt="...">
+                <img class="img" src="<%=item.img%>" width="100%" height="300px" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h3 class="card-title"> <%= item.name %> </h3>
                   <span class="btn like-btn" product-id="<%=item._id%>" >
